--- a/index.html
+++ b/index.html
@@ -1,51 +1,136 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Scoreboard : Scoreboard App" />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Scoreboard</title>
+    <meta charset="utf-8">
+    <title>Krombi Scoreboard</title>
+    <meta name="description" "Scoreboard for the krombi card game">
+    <meta name="author" content"Raphael Brand">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+    <style type="text/css">
+      .playerLabel {
+        cursor: move;
+        margin-right: 5px;
+      }
+      .scoreButtons {
+        margin-bottom: 5px;
+        margin-left: 5px;
+      }
+    </style>
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/pjuhri/scoreboard">View on GitHub</a>
-
-          <h1 id="project_title">Scoreboard</h1>
-          <h2 id="project_tagline">Scoreboard App</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/pjuhri/scoreboard/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/pjuhri/scoreboard/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+    <!-- Modals -->
+    <div id="addPlayersModal" class="modal hide fade">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Add players</h3>
+      </div>
+      <div class="modal-body">
+        <div class="input-append">
+          <input id="playerName" class="span2" size="16" type="text">
+          <button id="addPlayer" class="btn" type="button">Add</button>
+        </div>
+        <div id="playerLabels" class="fluid-row"></div>
+      </div>
+      <div class="modal-footer">
+        <a id="savePlayers" href="#" class="btn btn-primary" data-dismiss="modal">Save</a>
+      </div>
     </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>scoreboard</h1>
+    <div id="enterTricksModal" class="modal hide fade">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Enter Tricks</h3>
+      </div>
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <a id="saveTricks" href="#" class="btn btn-primary" data-dismiss="modal">Save</a>
+      </div>
 
-<p>Scoreboard App</p>
-      </section>
+    </div><div id="scoreModal" class="modal hide fade">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Enter Scores</h3>
+      </div>
+      <div class="modal-body"></div>
+      <div class="modal-footer">
+        <a id="saveScores" href="#" class="btn btn-primary" data-dismiss="modal">Save</a>
+      </div>
     </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Scoreboard maintained by <a href="https://github.com/pjuhri">pjuhri</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
+
+    <!-- Main Content -->
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div id="controls" class="btn-group">
+          <button class="btn" role="button" data-toggle="modal" href="#addPlayersModal">Add</button>
+          <button class="btn" role="button" data-toggle="modal" href="#enterTricksModal">Tricks</button>
+          <button class="btn" role="button" data-toggle="modal" href="#scoreModal">Scores</button>
+        </div>
+      </div>
+      <div class="row-fluid">
+        <table id="scoreboard" class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>R</th>
+            </tr>
+            </div>
+          </thead>
+          <tbody>
+            <tr>
+              <td>2</td>
+            </td>
+            <tr>
+              <td>3</td>
+            </td>
+            <tr>
+              <td>4</td>
+            </td>
+            <tr>
+              <td>5</td>
+            </td>
+            <tr>
+              <td>6</td>
+            </td>
+            <tr>
+              <td>7</td>
+            </td>
+            <tr>
+              <td>8</td>
+            </td>
+            <tr>
+              <td>8</td>
+            </td>
+            <tr>
+              <td>7</td>
+            </td>
+            <tr>
+              <td>6</td>
+            </td>
+            <tr>
+              <td>5</td>
+            </td>
+            <tr>
+              <td>4</td>
+            </td>
+            <tr>
+              <td>3</td>
+            </td>
+            <tr>
+              <td>2</td>
+            </td>
+          </tbody>
+        </table>
+      </div>
     </div>
 
-    
-
+    <!-- Javascript -->
+    <script src="js/jquery-1.8.2.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scoreboard.js"></script>
   </body>
 </html>
