--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Krombi Scoreboard</title>
-    <meta name="description" "Scoreboard for the krombi card game">
-    <meta name="author" content"Raphael Brand">
+    <meta name="description" content="Scoreboard for the krombi card game">
+    <meta name="author" content="Raphael Brand">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
@@ -78,51 +78,50 @@
             <tr>
               <th>R</th>
             </tr>
-            </div>
           </thead>
           <tbody>
             <tr>
               <td>2</td>
-            </td>
+            </tr>
             <tr>
               <td>3</td>
-            </td>
+            </tr>
             <tr>
               <td>4</td>
-            </td>
+            </tr>
             <tr>
               <td>5</td>
-            </td>
+            </tr>
             <tr>
               <td>6</td>
-            </td>
+            </tr>
             <tr>
               <td>7</td>
-            </td>
+            </tr>
             <tr>
               <td>8</td>
-            </td>
+            </tr>
             <tr>
               <td>8</td>
-            </td>
+            </tr>
             <tr>
               <td>7</td>
-            </td>
+            </tr>
             <tr>
               <td>6</td>
-            </td>
+            </tr>
             <tr>
               <td>5</td>
-            </td>
+            </tr>
             <tr>
               <td>4</td>
-            </td>
+            </tr>
             <tr>
               <td>3</td>
-            </td>
+            </tr>
             <tr>
               <td>2</td>
-            </td>
+            </tr>
           </tbody>
         </table>
       </div>
