--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div id="controls" class="btn-group">
-          <button class="btn" role="button" data-toggle="modal" href="#addPlayersModal">Add</button>
-          <button class="btn" role="button" data-toggle="modal" href="#enterTricksModal">Tricks</button>
-          <button class="btn" role="button" data-toggle="modal" href="#scoreModal">Scores</button>
+          <a class="btn" role="button" data-toggle="modal" href="#addPlayersModal">Add</a>
+          <a class="btn" role="button" data-toggle="modal" href="#enterTricksModal">Tricks</a>
+          <a class="btn" role="button" data-toggle="modal" href="#scoreModal">Scores</a>
         </div>
       </div>
       <div class="row-fluid">
